force-app/main/default/objects/Audit__c/Audit__c.object-meta.xml
<CustomObject>
    <description>Per BOFE Request (SR B09) - To track summary audit data to summarize and report on the audits completed by staff.</description>
    <label>Audit</label>
    <nameField>
        <displayFormat>AU-{000000}</displayFormat>
        <label>Audit Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>