force-app/main/default/objects/Audit__c/fields/Audit_Status__c.field-meta.xml
<CustomField>
    <fullName>Audit_Status__c</fullName>
    <description>Use for BOFE approval process on Audit</description>
    <label>Audit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>