force-app/main/default/objects/Audit__c/fields/Case_Issue__c.field-meta.xml
<CustomField>
    <fullName>Case_Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Issue</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>DIR_Violation__c.Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Case_Management__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DIR_Violation__c</referenceTo>
    <relationshipName>Audit_Data</relationshipName>
    <type>Lookup</type>
</CustomField>