force-app/main/default/objects/Audit__c/fields/Violations_Date_Period__c.field-meta.xml
<CustomField>
    <fullName>Violations_Date_Period__c</fullName>
    <label>Violations Date Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>